# turbid

./: .bumpversion.cfg  .travis.yml  README.md  pyproject.toml
.github/workflows/: pytest.yml
tests/: conftest.py  genvalues.py  stable_values.json  test_stable_values.py  test_turbid_cipher.py  test_turbid_sqlalchemy.py  values.json
turbid/: __init__.py  turbid.py
