[tool.poetry]
name = "turbid"
version = "0.1.1"
description = "Transparent obfuscation of numeric IDs"
authors = ["Pedro Werneck <pjwerneck@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = { version = ">=1.4.0,<3.0.0", optional = true }
fastfpe = "^0.1.2"

[tool.poetry.extras]
sqlalchemy = ["sqlalchemy"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
black = "^24.4.2"
isort = "^5.13.2"
ruff = "^0.5.5"
hypothesis = "^6.108.5"
faker = "^26.0.0"
pytest-profiling = "^1.7.0"
pytest-cov = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = ["--strict-markers", "-vv"]
console_output_style = "progress"

[tool.ruff]
exclude = [".git", ".venv"]
line-length = 99
target-version = "py312"
extend-exclude = ["neuropad/core/**"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.isort]
force-single-line = true